fix: se aumento el z-index del carrito y se hizo correciones en el responsive

--- a/ecomerce/Client/src/components/sideBarCar/SideBarCar.module.css
+++ b/ecomerce/Client/src/components/sideBarCar/SideBarCar.module.css
@@ -1,7 +1,7 @@
 .sideMenu {
     position: absolute;
     background-color: #F7F7F7;
-    z-index: 20;
+    z-index: 500;
     border-radius: 5% 0 0 5%;
 }
 
@@ -10,5 +10,13 @@
     .sideMenu {
         right: 0%;
         width: 60%;
+    }
+}
+
+@media only screen and (max-width: 915px) {
+
+    .sideMenu {
+        top: .5%;
+        width: 100%;
     }
 }
